<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.boiler.usbprinter.MainActivity" >
    <item
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/Align_Mode">
        <menu>
            <group>
                <item
                    android:id="@+id/align_0"
                    android:title="@string/Left"/>
                <item
                    android:id="@+id/align_1"
                    android:title="@string/Center"/>
                <item
                    android:id="@+id/align_2"
                    android:title="@string/Right"/>
            </group>
        </menu>
    </item>
    <item
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/UnderLine">
        <menu>
            <group>
                <item
                    android:id="@+id/under_0"
                    android:title="@string/Cancel"/>
                <item
                    android:id="@+id/under_1"
                    android:title="@string/Underline_1"/>
                <item
                    android:id="@+id/under_2"
                    android:title="@string/Underline_2"/>
            </group>
        </menu>
    </item>
    <item
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/Linespace">
        <menu>
            <group>
                <item
                    android:id="@+id/linespace_30"
                    android:title="@string/line_30"/>
                <item
                    android:id="@+id/linespace_40"
                    android:title="@string/line_40"/>
                <item
                    android:id="@+id/linespace_50"
                    android:title="@string/line_50"/>
                <item
                    android:id="@+id/linespace_60"
                    android:title="@string/line_60"/>
                <item
                    android:id="@+id/linespace_70"
                    android:title="@string/line_70"/>
            </group>
        </menu>
    </item>
    <item
        android:orderInCategory="103"
        android:showAsAction="always"
        android:title="@string/Rotate">
        <menu>
            <group>
                <item
                    android:id="@+id/font_0"
                    android:title="@string/Normal"/>
                <item
                    android:id="@+id/font_1"
                    android:title="@string/Rotation_90degrees"/>
            </group>
        </menu>
    </item>
    <item
        android:orderInCategory="104"
        android:showAsAction="always"
        android:title="@string/Cutter">
        <menu>
            <group>
                <item
                    android:id="@+id/cutter_0"
                    android:title="@string/Total"/>
                <item
                    android:id="@+id/cutter_1"
                    android:title="@string/Half"/>
            </group>
        </menu>
    </item>
    <item
        android:orderInCategory="105"
        android:showAsAction="always"
        android:title="@string/System">
        <menu>
            <group>
                <item
                    android:id="@+id/system_0"
                    android:title="@string/ExitSystem"/>
                <item
                    android:id="@+id/system_1"
                    android:title="@string/VersionSystem"/>
                <item
                    android:id="@+id/system_2"
                    android:title="@string/OpenBlackMark"/>
                <item
                    android:id="@+id/system_3"
                    android:title="@string/CloseBlackMark"/>
                <item
                    android:id="@+id/system_4"
                    android:title="@string/ContinuePrint"/>
                <!-- <item
                    android:id="@+id/system_5"
                    android:title="@string/DeviceSelect"/>
                <item
                    android:id="@+id/system_6"
                    android:title="@string/SpecilText"/> -->
            </group>
        </menu>
    </item>

</menu>