<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/linear_upper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!--
        <CheckBox
                android:id="@+id/IsExtend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/Extend"
                android:textSize="16sp" />
        <CheckBox
                android:id="@+id/IsSimplify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/Simplify"
                android:textSize="16sp" />
        <CheckBox
                android:id="@+id/IsSimplify2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/Simplify2"
                android:textSize="16sp" />
            -->

            <RadioGroup
                android:id="@+id/radioGroup_split"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/InputPrint_btn"
                style="@style/TextStyle02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/cornerbtn_style2"
                android:text="@string/InputPrint_btn" />

            <EditText
                android:id="@+id/InputContent_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/editsharp"
                android:hint="@string/smallticket_qrcode_hint"
                android:text="@string/Print_code_content_et"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_first"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Load_nvbmp_btn"
                    style="@style/TextStyle02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cornerbtn_style"
                    android:text="@string/Load_Bmp_btn"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    style="@style/TextStyle02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cornerbtn_style"
                    android:text="@string/D347QR"
                    android:visibility="gone" />

                <Button
                    style="@style/TextStyle02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/cornerbtn_style2"
                    android:text="@string/D245QR"
                    android:visibility="gone" />

                <Button
                    style="@style/TextStyle02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/cornerbtn_style"
                    android:text="@string/T500IIQr"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!--
            <EditText
                android:id="@+id/SetADValue_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:background="@drawable/editsharp4"
                android:hint="@string/First_hint"
                android:gravity="center"
                android:inputType="number"
                android:text="64"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/DisplayAdVlaue_tv"
                style="@style/TextStyle02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="0.3"
                android:text="黑标AD值"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Set_ADValue_Btn"
                style="@style/TextStyle02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/cornerbtn_style"
                android:text="@string/Set_ADValue_btn" />
                -->
                <!--
                 <Button
                android:id="@+id/Print_ConverImg_Btn"
                style="@style/TextStyle02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:background="@drawable/cornerbtn_style2"
                android:text="@string/Print_Conver_Img_btn" />
                -->

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>